# MiPTV

./: Makefile  README.md
.agents/agents/: miptv-analyst.md  miptv-planner.md
.claude/agents/: miptv-developer.md
.github/workflows/: ci.yml
app/: .gitignore  README.md  app.json  index.web.js  l10n.yaml  metro.config.js  package.json  pnpm-lock.yaml  pubspec.yaml  tsconfig.json  tsconfig.web.json  webpack.config.js
app/android/: settings.gradle
app/android/app/: build.gradle  build.gradle.kts
app/ios/: Podfile
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/ios/miptv/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
app/ios/miptv.xcodeproj/: project.pbxproj
app/ios/miptv.xcworkspace/: contents.xcworkspacedata
app/ios/miptvTests/: miptvTests.m
app/lib/: main.dart
app/lib/app/: providers.dart  router.dart  scaffold_with_nav_bar.dart  theme.dart
app/lib/core/: url_builder.dart
app/lib/l10n/: app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_it.arb  app_localizations.dart  app_localizations_de.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_fr.dart  app_localizations_it.dart  app_localizations_pt.dart  app_pt.arb
app/public/: index.html
app/src/: App.tsx
app/src/components/: Card.tsx  EmptyState.tsx  FavouriteButton.tsx  LoadingView.tsx  PinEntryModal.tsx  PrimaryButton.tsx  Separator.tsx  SyncBanner.tsx  (+5 more)
app/test/: widget_test.dart
fastlane/: Appfile  Fastfile
ios/: .gitignore  MiPTVCore.podspec  NativeMiPTVCore.mm  NativeMiPTVCore.swift
ios/MiPTVCore.xcframework/: Info.plist
ios/xcframework-headers/: module.modulemap
rust/: Cargo.toml  rust-toolchain.toml
rust/crates/core-data/: Cargo.toml
rust/crates/core-data/migrations/: 0001_initial.sql
rust/crates/core-data/src/: db.rs  http.rs  lib.rs  sync.rs
rust/crates/core-domain/: Cargo.toml
rust/crates/core-domain/src/: error.rs  models.rs  repository.rs
rust/crates/core-viewmodel/: Cargo.toml
rust/crates/core-viewmodel/src/: state.rs
rust/crates/ffi-uniffi/: Cargo.toml
rust/crates/ffi-uniffi/src/: lib.rs
rust/crates/parser-m3u/: Cargo.toml
rust/crates/parser-m3u/src/: error.rs  lib.rs  parser.rs
rust/crates/parser-xmltv/: Cargo.toml
rust/crates/parser-xmltv/src/: error.rs  lib.rs  parser.rs
rust/crates/uniffi-bindgen/: Cargo.toml
spec/: SPECS.md
specs/: IMPLEMENTATION_PLAN.md  SPECS.md
tizen/: config.xml  package.sh
webos/: appinfo.json  package.sh
(+173 files in other folders)
