[package]
name = "core-data"
version.workspace = true
edition.workspace = true

[dependencies]
core-domain = { workspace = true }
parser-m3u = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
moka = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
