[package]
name = "ffi-uniffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
core-domain = { workspace = true }
core-data = { workspace = true }
parser-xmltv = { workspace = true }
uniffi = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
